@@ -1,5 +1,11 @@
 2000-08-01  Akim Demaille  <akim@epita.fr>
 
+	* acfunctions.m4 (_AC_LIBOBJ_STRTOD, AC_FUNC_STRTOD,
+	AM_FUNC_STRTOD): New macros, from Automake.
+	* acfunctions: Adjust.
+
+2000-08-01  Akim Demaille  <akim@epita.fr>
+
 	* acidentifiers: Catch ptrdiff_t.
 	* acspecific.m4 (AM_TYPE_PTRDIFF_T): AU define.
 
